overflow error fixed

--- a/src/componenets/Profile/ProfileInfo/Contacts/Contacts.module.css
+++ b/src/componenets/Profile/ProfileInfo/Contacts/Contacts.module.css
@@ -7,7 +7,7 @@
 }
 
 .contactsLinks {
-  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .contactsIcon {
